--- a/index.html
+++ b/index.html
@@ -5,27 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1><center>CALCULATOR</center></h1>
     <center><div class="main">
      <div id="screen"></div>         
      <div id="display">
-        <div class="number">1</div>
-        <div class="number">2</div>
-        <div class="number">3</div>
-        <div class="number">4</div>
-        <div class="number">5</div>
-        <div class="number">6</div>
-        <div class="number">7</div>
-        <div class="number">8</div>
-        <div class="number">9</div>
-        <div class="number">0</div>
-        <div class="number">-</div>
-        <div class="number">+</div>
-        <div class="number">*</div>
-        <div class="number">/</div>
+        <div class="mian">1</div>
+        <div class="mian">2</div>
+        <div class="mian">3</div>
+        <div class="mian">4</div>
+        <div class="mian">5</div>
+        <div class="mian">6</div>
+        <div class="mian">7</div>
+        <div class="mian">8</div>
+        <div class="mian">9</div>
+        <div class="mian">0</div>
+        <script src="script.js"></script>
+        <div class="operator">-</div>
+        <div class="operator">+</div>
+        <div class="operator">*</div>
+        <div class="operator">/</div>
+        <script src="index.js"></script>
      </div>
     </div></center>
+   
+    
 </body>
 </html>
